[workspace]
resolver = "2"
members = ["app", "lib"]

[workspace.package]
authors = ["Ash Manning <ash@layertwolabs.com>"]
edition = "2024"
version = "0.3.0"
license-file = "LICENSE.txt"
publish = false

[workspace.dependencies]
anyhow = "1.0.102"
bitcoin = { version = "0.32.8", features = ["serde"] }
futures = "0.3.32"
jsonrpsee = "0.26.0"
tokio = "1.50.0"
tracing = "0.1.44"

[workspace.dependencies.bitcoin-jsonrpsee]
git = "https://github.com/LayerTwo-Labs/bitcoin-jsonrpsee.git"
rev = "db1fdfd5ecddfc7855cd872546b47429cb29a0bf"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"
