[workspace]
resolver = "2"
members = ["app", "lib"]

[workspace.package]
authors = ["Ash Manning <ash@layertwolabs.com>"]
edition = "2024"
version = "0.3.0"
license-file = "LICENSE.txt"
publish = false

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.81"
bitcoin = "0.32.9"
chrono = "0.4.44"
clap = "4.6.1"
educe = "0.6.0"
either = "1.13.0"
futures = "0.3.32"
hashlink = "0.11.0"
imbl = "7.0.0"
indexmap = "2.14.0"
jsonrpsee = "0.26.0"
lending-iterator = "0.1.7"
nonempty = "0.12.0"
parking_lot = "0.12.3"
thiserror = "2.0.16"
tokio = "1.52.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
typewit = "1.15.2"
ulid = "1.2.1"
zeromq = "0.6.0"

[workspace.dependencies.bitcoin-jsonrpsee]
git = "https://github.com/LayerTwo-Labs/bitcoin-jsonrpsee.git"
rev = "db1fdfd5ecddfc7855cd872546b47429cb29a0bf"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"
