[workspace]
resolver = "2"
members = ["app", "integration_tests", "lib"]

[workspace.package]
authors = ["Ash Manning <ash@layertwolabs.com>"]
edition = "2024"
version = "0.4.0"
license-file = "LICENSE.txt"
publish = false

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.81"
bitcoin = "0.32.100"
chrono = "0.4.44"
clap = "4.6.1"
educe = { version = "0.6.0", default-features = false }
either = "1.16.0"
futures = "0.3.32"
hashlink = "0.12.0"
imbl = "7.0.0"
indexmap = "2.14.0"
jsonrpsee = "0.26.0"
lender = "0.8.0"
nonempty = "0.12.0"
parking_lot = "0.12.3"
polonius-the-crab = "0.5.0"
thiserror = "2.0.16"
tokio = "1.52.3"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
typewit = "1.15.2"
ulid = "1.2.1"
zeromq = "0.6.0"

[workspace.dependencies.bitcoin-jsonrpsee]
git = "https://github.com/LayerTwo-Labs/bitcoin-jsonrpsee.git"
rev = "4810db2112d1bc437b8c4b78520f79e5e9ce8630"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"
