[package]
name = "cusf-enforcer-mempool-demo"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
bitcoin-jsonrpsee = { workspace = true, features = ["tracing"] }
clap = { version = "4.6.1", features = ["derive"] }
cusf-enforcer-mempool = { path = "../lib" }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.23"

[lints]
workspace = true

[[bin]]
name = "cusf-enforcer-mempool-demo"
path = "main.rs"
