[package]
name = "cusf-enforcer-mempool"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.81"
bitcoin-jsonrpsee = { workspace = true, features = ["tracing"] }
bitcoin = { workspace = true }
blake3 = "1.5.3"
borsh = "1.5.1"
chrono = "0.4.38"
educe = "0.6.0"
either = "1.13.0"
futures = { workspace = true }
hashlink = "0.11.0"
imbl = "7.0.0"
indexmap = "2.4.0"
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
lending-iterator = "0.1.7"
nonempty = "0.12.0"
num-traits = "0.2.19"
parking_lot = "0.12.3"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "2.0.17"
tokio = { workspace = true }
tracing = { workspace = true }
typewit = "1.11.0"
zeromq = "0.4.1"
ulid = "1.2.1"

[lints]
workspace = true

[lib]
name = "cusf_enforcer_mempool"
path = "lib.rs"
