[package]
name = "cusf-enforcer-mempool"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.81"
bitcoin-jsonrpsee = { workspace = true, features = ["tracing"] }
bitcoin = { workspace = true }
chrono = "0.4.44"
educe = "0.6.0"
either = "1.13.0"
futures = { workspace = true }
hashlink = "0.11.0"
imbl = "7.0.0"
indexmap = "2.14.0"
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
lending-iterator = "0.1.7"
nonempty = "0.12.0"
parking_lot = "0.12.3"
# pinned due to a bug in fatality
thiserror = "=2.0.16"
tokio = { workspace = true }
tracing = { workspace = true }
typewit = "1.15.2"
zeromq = "0.5.0"
ulid = "1.2.1"

[lints]
workspace = true

[lib]
name = "cusf_enforcer_mempool"
path = "lib.rs"
doctest = false # We don't have any doctests. `cargo shear` fails on this if not set to false. 
