[package]
name = "cusf-enforcer-mempool"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin-jsonrpsee = { workspace = true, features = ["tracing"] }
bitcoin = { workspace = true }
chrono = { workspace = true }
educe = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hashlink = { workspace = true }
imbl = { workspace = true }
indexmap = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
lender = { workspace = true }
nonempty = { workspace = true }
parking_lot = { workspace = true }
polonius-the-crab = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
typewit = { workspace = true }
ulid = { workspace = true }
zeromq = { workspace = true }

[lints]
workspace = true

[lib]
name = "cusf_enforcer_mempool"
path = "lib.rs"
doctest = false # We don't have any doctests. `cargo shear` fails on this if not set to false. 
